# CoachIQ

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CoachIQ_Whitepaper_v3.md  DESIGN.md  Dockerfile  PRODUCT_OVERVIEW.md  TODOS.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vitest.config.ts
api/: index.py
chrome-extension/: background.js  content.js  manifest.json
coachiq/: config.py  database.py  main.py  models.py
coachiq/cron/: backup.py  health_check.py  retry_failed.py
coachiq/services/: alerting.py  client_registry.py  drive.py  notebooklm.py  transcript.py  webhook.py
prisma/: schema.prisma
scripts/: backfill-coach-settings-secrets.ts  backfill-fathom-secret.ts  backfill-sessions.ts  backfill-time-entries.ts  backfill-transcripts.ts  billing-clean-slate.ts  clear-stale-stripe-customers.ts  db-stats.ts  dedupe-clients.ts  fetch-notebook-ids.ts  generate-embeddings.ts  generate-synopses-week.ts  generate-synopses.ts  import-notebook-ids.ts  import-transcripts.ts  list-dallas-invoices.ts  migrate-clients.ts  seed-admin-coaches.ts  seed-pipeline-demo-cleanup.sql  seed-pipeline-demo.sql  seed-test-invoice.ts  set-rate.ts  sync-notebook-ids.ts  test-calendar.ts  void-invoice.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/components/: client-insights.tsx  coaching-calendar.tsx  day-brief.tsx  mobile-nav.tsx  modal.tsx  morning-brief-button.tsx  practice-insights.tsx  sidebar.tsx  snapshot-banner.tsx  (+2 more)
tests/: test_client_registry.py  test_transcript.py  test_webhook.py
(+135 files in other folders)
