[project]
name = "coachiq"
version = "0.1.0"
description = "Coaching intelligence system — Fathom transcripts → NotebookLM notebooks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.7",
    "google-api-python-client>=2.160",
    "google-auth>=2.38",
    "google-auth-oauthlib>=1.2",
    "notebooklm-py[browser]>=0.3",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
]

[project.scripts]
coachiq = "coachiq.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
